Fix: Pinned Tab - `margin` to `z-index` at `photon-style` #330

--- a/userChrome.css
+++ b/userChrome.css
@@ -2881,12 +2881,6 @@ menuitem.openintabs-menuitem,
 #tabbrowser-arrowscrollbox[overflowing="true"] > .tabbrowser-tab[pinned="true"] .tab-background {
   max-height: var(--tab-min-height) !important; /* Force apply height */
 }
-#tabbrowser-arrowscrollbox[overflowing="true"] > .tabbrowser-tab[pinned="true"] .tab-background {
-  min-height: unset !important; /* Prevent overflow pinned tab hover background overlap */
-}
-#tabbrowser-arrowscrollbox[overflowing="true"] > .tabbrowser-tab[pinned="true"] .tab-content {
-  margin-top: auto !important; /* Fix overflow pinned tab icon to vertical center */
-}
 
 /* Top Margin */
 .tab-background,
@@ -3202,6 +3196,7 @@ menupopup > menu {
 }
 
 /* Remove line at Toolbar's top */
+#nav-bar,
 #tabbrowser-tabs {
   z-index: 1 !important;
 }
